# near-outlayer

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  API.md  AUTHENTICATION.md  CHANGELOG_GITHUB_COMPILATION.md  CLAUDE.md  CONTEXT.md  CUSTODY.md  Cargo.toml  DEPLOYMENT_GUIDE.md  JOB_BASED_WORKFLOW.md  MVP_DEVELOPMENT_PLAN.md  NEAROffshoreOnepager.md  NEXT_STEPS.md  ORACLE_RFP_PROPOSAL.md  Onepager.md  PROJECT.md  QUICK_START.md  README.md  RFP_RESPONSE.md  SETUP.md  TESTING.md  VAULTS.md  VRF.md  WORKER_ATTESTATION.md  docker-compose.dev.yml  docker-compose.mainnet.yml  docker-compose.testnet.yml  docker-compose.yml  eslint.config.js  quick-start.sh  stop-services.sh
contract/: Cargo.toml  README.md  build.sh
contract/src/: admin.rs  events.rs  execution.rs  lib.rs  math.rs  migration.rs  payment.rs  projects.rs  secrets.rs  types.rs  views.rs  wallet.rs
coordinator/: .dockerignore  .env.example  ADMIN_API.md  Cargo.toml  README.md  test_github_parser.rs
coordinator/docs/: RPC_THROTTLING.md
coordinator/migrations/: 20250101000001_initial_schema.sql  20251015000002_worker_tracking_and_enhanced_history.sql  20251017000003_add_github_info.sql  20251017000004_job_based_workflow.sql  20251017000005_add_user_info_to_jobs.sql  20251017000006_add_transaction_hash_to_history.sql  20251017233225_fix_execution_history_nullable.sql  20251017234626_add_actual_cost.sql  20251018000609_add_compile_cost.sql  20251025000001_add_job_statuses.sql  20251027000001_add_compilation_logs.sql  20251112000006_create_attestations_table.sql  20251112000007_create_api_keys_table.sql  20251112000008_add_worker_rtmr3_tracking.sql  20251112000009_fix_execute_task_fields_constraint.sql  20251112000010_fix_valid_hashes_constraint.sql  20251112000011_allow_branch_names_in_commit_hash.sql  20251118000001_add_execution_requests.sql  20251118000002_add_compile_cost_to_jobs.sql  20251118000003_add_request_flags.sql  20251119000001_add_compile_result.sql  20251119000002_add_content_hash.sql  20251119000003_add_compile_time_ms.sql  20251119000003_add_wasm_url_to_jobs.sql  20251218000001_add_storage_tables.sql  20251218000002_add_project_to_jobs.sql  20260105000001_storage_require_project.sql  20260105000002_add_project_uuid_to_execution_requests.sql  20260105000003_add_project_id_to_execution_requests.sql  20260108000001_payment_key_tables.sql  20260108000002_attestations_https_support.sql  20260108000003_payment_key_usage_job_id.sql  20260109000001_payment_keys_metadata.sql  20260111000001_drop_api_keys_tables.sql  20260112000001_add_storage_public_flag.sql  20260112000002_add_attached_usdc_to_execution_requests.sql  20260113000001_add_earnings_history.sql  20260113100000_rename_usdc_to_usd.sql  20260121000001_add_grant_keys.sql  20260127000001_fix_execute_task_fields_constraint.sql  (+7 more)
coordinator/monitoring/: README.md  cleanup-workers.sh  docker-compose.yml  restart.sh
coordinator/src/: auth.rs  auth_near.rs  background_jobs.rs  config.rs  github.rs  github_canon.rs  main.rs  models.rs  near_client.rs
keystore-dao-contract/: Cargo.toml  README.md  build-docker.sh  build.sh  contract-dao.wasm
keystore-dao-contract/res/: keystore_dao_contract.wasm
keystore-dao-contract/src/: collateral.rs  lib.rs  migration.rs
keystore-worker/: .env.example  BALANCE_CHECKS_IMPLEMENTATION.md  Cargo.toml  README.md  bump-shared-tee-lock.sh
keystore-worker/.cargo/: config.toml
keystore-worker/scripts/: README.md  encrypt_secrets.py  gen_solana_vectors.mjs  test_encryption.py
keystore-worker/src/: api.rs  attestation.rs  config.rs  crypto.rs  eip712.rs  eip712_vectors.json  ephemeral_keys.rs  main.rs  mpc_ckd.rs  near.rs  nep366.rs  secret_generation.rs  solana.rs  solana_vectors.json  tdx_attestation.rs  tee_registration.rs  types.rs  utils.rs  vault_verifier.rs
outlayer-monitor/: Cargo.toml  README.md
outlayer-monitor/src/: detector.rs  main.rs  run.rs  sinks.rs  source.rs  types.rs
outlayer-quickjs-executor/: Cargo.toml  README.md
outlayer-quickjs-executor/src/: lib.rs
outlayer-quickjs-executor/tests/: counter_contract.js  quickjs_demo.rs
outlayer-verification-suite/: Cargo.toml  README.md
outlayer-verification-suite/src/: bridge_nearcore.rs  lib.rs  strategies.rs
outlayer-verification-suite/tests/: capabilities.rs  determinism.rs  gas_accounting.rs  partitioning.rs  state_integrity.rs
register-contract/: COLLATERAL_TECHNICAL.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.build  QUICK_START.md  README.md  build-docker.sh  build.sh  worker-contract.wasm
register-contract/res/: register_contract.wasm
register-contract/src/: lib.rs  migration.rs
scripts/customer-recovery/: Cargo.toml  README.md  walkthrough.sh
sdk/outlayer/: Cargo.toml  README.md
sdk/outlayer-macros/: Cargo.toml
tee-auth/: Cargo.toml  README.md
tee-auth/src/: lib.rs
tests/verification-tests/: Cargo.toml  README.md  README.md.bak  TEST_REPORT.md  TEST_REPORT.md.bak
vault-contract/: Cargo.toml  GLOBAL-CONTACT.md  README.md  build-docker.sh  build.sh
vault-contract/res/: vault_contract.wasm
vault-contract/src/: lib.rs
vault-contract/tests/: integration.rs  testnet.rs
wasi-examples/payment-keys-with-intents/: Cargo.toml  build.sh  tokens.json
wasi-examples/rpc-test-ark/: Cargo.toml  README.md  test_local.sh
wasi-examples/test-storage-ark/: Cargo.toml  README.md  build.sh
wasi-examples/vault-checker/: Cargo.toml  build.sh
wasi-examples/wasi-test-runner/: Cargo.toml  README.md
worker/: .dockerignore  .env.example  Cargo.toml  PROJECT.md  README.md  RUN_TEST.sh  TESTING.md  docker.txt  test_dstack.rs  test_transactions.txt
worker/examples/: README.md  test_fuel_component.rs
worker/scripts/: test_github_compilation.sh
worker/src/: api_client.rs  collateral_fetcher.rs  compiled_cache.rs  compiler.rs  config.rs  event_monitor.rs  executor.rs  fastfs.rs  keystore_client.rs  lib.rs  main.rs  near_client.rs  registration.rs  tdx_attestation.rs  wasm_cache.rs
worker/tests/: component_tests.rs  integration_test.rs  outlayer_rpc_test.rs  test_wasm_execution.rs
worker/wit/: world.wit
(+464 files in other folders)
