[workspace]
members = [
  "outlayer-verification-suite",
  "outlayer-quickjs-executor",
  "tests/verification-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Common dependencies used across workspace
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tempfile = "3.10"
wasmtime = { version = "27.0", default-features = false }
wasmtime-wasi = "27.0"
