[package]
name = "offchainvm-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.9.0", features = ["legacy", "unit-testing"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
base64 = "0.21.7"
sha2 = "0.10.8"
hex = "0.4"
bs58 = "0.5"

[dev-dependencies]
near-workspaces = "0.14.1"
tokio = { version = "1.40", features = ["full"] }

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
