[package]
name = "offchainvm-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "time", "bigdecimal", "chrono"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.21"

# TDX attestation parsing
tdx-quote = "0.0.4"

# Regex
regex = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenv = "0.15"

# Multipart form data
multer = "3.0"

# HTTP client (for NEAR RPC calls)
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
