[package]
name = "tee-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
bs58 = "0.5"

# HTTP client (for NEAR RPC view_access_key)
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
