[package]
name = "vault-contract"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Replaces the 7-day cessation delay / 7-day finalize window with
# 30s / 30s values so near-sandbox integration tests can exercise the
# real recovery flow without `fast_forward`'ing 1.3M blocks. NEVER
# enable this in production builds — the resulting WASM hash is
# deliberately distinct and will fail the keystore-dao
# `is_vault_code_approved` check.
test-timing = []

[dependencies]
near-sdk = { version = "= 5.9.0", features = ["legacy", "unstable"] }
schemars = "0.8"

[dev-dependencies]
# Bumped through several pins as cargo-near / near-sdk / sandbox neard
# drifted out of sync:
#   * `= 0.14.1` (sandbox 2.0.0) — original; rejected WASM from
#     cargo-near 0.16.0 / near-sdk 5.9.0 with
#     `CompilationError(PrepareError(Deserialization))`.
#   * `= 0.18.0` (sandbox 2.5.1, 2026-05-06) — was supposed to fix
#     the above; still rejected the same WASM. The fix actually
#     required sandbox neard 2.6+.
#   * `= 0.22.1` (sandbox 2.6.x, 2026-05-11) — current. Pulls in
#     `cargo_metadata 0.21` which needs rustc 1.86+. The contract's
#     own `rust-toolchain.toml` still pins 1.85.0 for the
#     reproducible production WASM build; integration tests are
#     invoked with `cargo +1.88.0 test ... --test integration` so
#     dev-deps compile under the newer toolchain without affecting
#     the contract artefact.
near-workspaces = { version = "= 0.22.1", features = ["unstable"] }
near-sdk = { version = "= 5.9.0", features = ["legacy", "unstable", "unit-testing"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

# Keep the embedded mock keystore-dao crate isolated so it does not get pulled
# into this contract's build. It is its own workspace (see its Cargo.toml).
[workspace]
exclude = ["tests/mock-keystore-dao"]
