[package]
name = "offchainvm-worker"
version = "0.1.0"
edition = "2021"

[lib]
name = "offchainvm_worker"
path = "src/lib.rs"

[[bin]]
name = "offchainvm-worker"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# HTTP client for API
reqwest = { version = "0.11", features = ["json", "multipart"] }

# NEAR
near-jsonrpc-client = "0.13"
near-primitives = "0.26"
near-crypto = "0.26"
near-jsonrpc-primitives = "0.26"

# WASM execution (wasmtime with WASI Preview 2 support)
# wasmtime = { version = "37", features = ["component-model", "async"] }
# WASI core, CLI (for WasiCommand), and HTTP support.
# FIX: Добавляем фичу 'cli', чтобы экспортировался модуль `bindings` для WasiCommand.
# wasmtime-wasi = { version = "37" } 

wasmtime = { version = "28", features = ["component-model", "async"] }
wasmtime-wasi = "28"
wasmtime-wasi-http = "28"
wasmparser = "0.220"

# WASM execution (wasmi for WASI Preview 1 support)
wasmi = "0.32"

# Docker client
bollard = "0.17"
futures-util = "0.3"
tar = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenv = "0.15"

# Crypto
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"
base64 = "0.22"
ed25519-dalek = "2.1"

# Utils
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
rand = "0.8"

[dev-dependencies]
