[package]
name = "outlayer-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for OutLayer SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastnear/near-outlayer"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
