[package]
name = "outlayer"
version = "0.1.0"
edition = "2021"
description = "SDK for OutLayer off-chain WASM execution on NEAR"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastnear/near-outlayer"
keywords = ["near", "wasm", "wasi", "storage", "blockchain"]
categories = ["wasm", "api-bindings"]

[dependencies]
outlayer-macros = { path = "../outlayer-macros" }
wit-bindgen = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
