[package]
name = "verification-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
blake3 = "1.5"

# WASM execution runtimes
wasmi = "0.31"
wasmtime = "27.0"
wasmtime-wasi = "27.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "run_all_integration_tests"
path = "src/main.rs"
