[package]
name = "payment-keys-with-intents"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "payment-keys-with-intents"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2.1"
bs58 = "0.5"
borsh = { version = "1.5", features = ["derive"] }
wasi-http-client = "0.2"
outlayer = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
