[package]
name = "test-storage-ark"
version = "0.1.0"
edition = "2021"
description = "Test WASM for OutLayer persistent storage host functions"

[[bin]]
name = "test-storage-ark"
path = "src/main.rs"

[dependencies]
outlayer = { path = "../../sdk/outlayer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
