[package]
name = "wasi-test-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasi-test"
path = "src/main.rs"

[dependencies]
wasmtime = { version = "28", features = ["component-model", "async"] }
wasmtime-wasi = "28"
wasmtime-wasi-http = "28"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.22"
near-crypto = "0.29"
near-primitives = "0.29"
borsh = "1.5"
bs58 = "0.5"
